--- a/Algoritimo7.html
+++ b/Algoritimo7.html
@@ -10,7 +10,7 @@
         let capital = 0;
         let maior = 0;
         let total = 0;
-        for(let i = 1; i <= 3; i++){ //Conciderando que tivemos 300 pessoas passando pela rodoviária no dia 
+        for(let i = 1; i <= 3; i++){ //Considerando que tivemos 300 pessoas passando pela rodoviária no dia 
             total++
         procedencia = parseInt(prompt('Informe sua procedência! \nDigite "0" se você veio da capital.\nDigite "1" se você veio do interior.\nDigite "2" se você veio de outro estado.'))
         if(procedencia == "0"){
